--- a/theater/package.json
+++ b/theater/package.json
@@ -13,7 +13,8 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "cli": "0.11.1"
+    "cli": "0.11.1",
+    "node-env-file": "0.1.8"
   },
   "bin": {
     "theater": "./bin/server"
