--- a/theater/package.json
+++ b/theater/package.json
@@ -17,7 +17,8 @@
     "cli": "0.11.1",
     "node-env-file": "0.1.8",
     "markdown-it": "5.0.2",
-    "front-matter": "2.0.1"
+    "front-matter": "2.0.1",
+    "mustache": "2.2.1"
   },
   "bin": {
     "theater": "./bin/server"
